# functional-programming-course

./: README.md
homework-0-nkorzh/: README.md
homework-0-nkorzh/hw0/: hw0.cabal
homework-0-nkorzh/hw0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs
homework-1-nkorzh/: README.md
homework-1-nkorzh/hw1/: hw1.cabal
homework-1-nkorzh/hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
homework-2-nkorzh/: README.md
homework-2-nkorzh/hw2/: hw2.cabal
homework-2-nkorzh/hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
homework-3-nkorzh/: README.md
homework-3-nkorzh/hw3/: hw3.cabal
homework-3-nkorzh/hw3/app/: Main.hs
homework-3-nkorzh/hw3/src/HW3/: Base.hs  Evaluator.hs  Parser.hs  ParserBase.hs  Pretty.hs
